test/langtools/tools/javac/datum/SubDatumCannotPassDuplicateArgsToSuperTest.out
SubDatumCannotPassDuplicateArgsToSuperTest.java:9:51: compiler.err.duplicate.argument.to.super: x
1 error
